site logo address is changed

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel=”shortcut icon” href=”public/favicon.ico”>
+    <link rel=”shortcut icon” href=”favicon.ico”>
     <title>Ali Varaste Pour</title>
   </head>
   <body>
